--- a/app/src/main/res/layout/activity_apk_groups_list.xml
+++ b/app/src/main/res/layout/activity_apk_groups_list.xml
@@ -6,4 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".biz.grouplist.ApkGroupsListActivity">
 
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@+id/refreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#FFF"
+            android:overScrollMode="never">
+
+        </android.support.v7.widget.RecyclerView>
+
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+
 </android.support.constraint.ConstraintLayout>
